# paper-pilot

./: README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
backend/: README.md
backend/alembic/: env.py
backend/alembic/versions/: 9d7b28745ed4_create_papers_and_chunks.py
backend/app/: main.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/ingest/: arxiv_client.py  chunker.py  embedder.py  repository.py
backend/app/rag/: fts.py  hybrid.py  reranker.py  rrf.py  search.py
docs/: paper-pilot-design.md
docs/learning/: alembic.md
scripts/: explore_arxiv.py  fts_smoke.py  hybrid_smoke.py  ingest_initial.py  ingest_smoke.py  rerank_smoke.py  search_smoke.py
