[project]
name = "paper-pilot"
version = "0.1.0"
description = "AI Research Agent based on arxiv papers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "arxiv>=2.4.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "greenlet>=3.3.2",
    "openai>=2.30.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pymupdf>=1.27.2.2",
    "sentence-transformers>=5.3.0",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.56.0",
    "uvicorn[standard]>=0.44.0",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
